--- a/porthfolio.html
+++ b/porthfolio.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Aniruddh Batwal</h1><hr>
-    <image src="images/manas.JPG"
-     alt="this is manas"
+    <image src="images/aniruddh.JPG"
+     alt="this is aniruddh"
      height="300px"
     /><br>
     <pre>       <big>I'm is Aniruddh Batwal <br>      following my passion <br>      living my dream Life</big>
@@ -17,4 +17,5 @@
     <a href="https://www.instagram.com/anirudh_batwal/?hl=en"><image src="images/insta.JPG" height="50px"/></a>
     <a href="https://www.linkedin.com/in/aniruddhbatwal/"><image src="images/linkedin.JPG" height="50px"/></a>
 </body>
+
 </html>
